--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,13 @@ authors = ["natalie sinner <nataliesinner@hotmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+matplotlib = "^3.3.0"
+pylint = "^2.5.3"
+keras = "^2.4.3"
+tf-estimator-nightly = "^2.4.0-alpha.2020080801"
+tf-nightly = "^2.4.0-alpha.20200808"
+pytest-watch = "^4.2.0"
+autopep8 = "^1.5.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
