--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ tf-estimator-nightly = "^2.4.0-alpha.2020080801"
 tf-nightly = "^2.4.0-alpha.20200808"
 pytest-watch = "^4.2.0"
 autopep8 = "^1.5.4"
+finnhub-python = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
