--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ finnhub-python = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+rope = "^0.17.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
