--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ tf-nightly = "^2.4.0-alpha.20200808"
 pytest-watch = "^4.2.0"
 autopep8 = "^1.5.4"
 finnhub-python = "^2.1.0"
+mplfinance = "^0.12.7-alpha.0"
+jupyterlab = "^2.2.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
