--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ tf-nightly = "^2.4.0-alpha.20200808"
 pytest-watch = "^4.2.0"
 autopep8 = "^1.5.4"
 finnhub-python = "^2.1.0"
+schedule = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
