--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pytest-watch = "^4.2.0"
 autopep8 = "^1.5.4"
 finnhub-python = "^2.1.0"
 schedule = "^0.6.0"
+pyfiglet = "^0.8.post1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
